--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "server": "node ./backend/server.js",
     "dev": "nodemon ./backend/server.js",
-    "client-install": "npm install --prefix ./frontend",
-    "client-build": "npm run build --prefix ./frontend",
+    "client-install": "npm install --prefix ./front-end",
+    "client-build": "npm run build --prefix ./front-end",
     "postinstall": "npm run client-install && npm run client-build"
   },
   "author": "",
