--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "server": "node ./backend/server.js",
-    "dev": "nodemon ./backend/server.js",
+    "server": "node ./back-end/server.js",
+    "dev": "nodemon ./back-end/server.js",
     "client-install": "npm install --prefix ./front-end",
     "client-build": "npm run build --prefix ./front-end",
     "postinstall": "npm run client-install && npm run client-build"
