--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "server": "node ./back-end/server.js",
     "dev": "nodemon ./back-end/server.js",
+    "server-install": "npm install --prefix ./back-end",
     "client-install": "npm install --prefix ./front-end",
     "client-build": "npm run build --prefix ./front-end",
-    "postinstall": "npm run client-install && npm run client-build"
+    "postinstall": "npm run server-install && npm run client-install && npm run client-build"
   },
  "engines": {
     "node": "20.8.0"
