--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "node ./back-end/server.js",
     "dev": "nodemon ./back-end/server.js",
-    "server-install": "npm install --prefix ./back-end",
+    "server-install": "npm install",
     "client-install": "npm install --prefix ./front-end",
     "client-build": "npm run build --prefix ./front-end",
     "postinstall": "npm run server-install && npm run client-install && npm run client-build"
