--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "server": "node ./backend/server.js",
     "dev": "nodemon ./backend/server.js",
+     "server-install": "npm install"
     "client-install": "npm install --prefix ../front-end",
     "client-build": "npm run build --prefix ../front-end",
     "postinstall": "npm run client-install && npm run client-build"
