--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,7 +9,7 @@
      "server-install": "npm install"
     "client-install": "npm install --prefix ../front-end",
     "client-build": "npm run build --prefix ../front-end",
-    "postinstall": "npm run client-install && npm run client-build"
+      "postinstall": "npm run server-install && npm run client-install && npm run client-build"
   },
   "author": "",
   "license": "ISC",
