--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "server": "node ./backend/server.js",
     "dev": "nodemon ./backend/server.js",
-     "server-install": "npm install"
-    "client-install": "npm install --prefix ../front-end",
-    "client-build": "npm run build --prefix ../front-end",
-      "postinstall": "npm run server-install && npm run client-install && npm run client-build"
+     "server-install": "npm install",
+    "client-install": "npm install --prefix ./front-end",
+    "client-build": "npm run build --prefix ./front-end",
+    "postinstall": "npm run server-install && npm run client-install && npm run client-build"
   },
   "author": "",
   "license": "ISC",
