--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "tourister web using mern technology",
     "main": "server.js",
     "scripts": {
-      "server": "node ./backend/server.js",
-      "dev": "nodemon ./backend/server.js",
-      "server-install": "npm install --prefix ./backend",
+      "server": "node ./back-end/server.js",
+      "dev": "nodemon ./back-end/server.js",
+      "server-install": "npm install --prefix ./back-end",
       "client-install": "npm install --prefix ./front-end",
       "client-build": "npm run build --prefix ./front-end",
       "postinstall": "npm run server-install && npm run client-install && npm run client-build"
